# VAMOS-AI

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vamosrules.json  CLAUDE.md  VAMOS_AI_전수진단_레지스터_2026-06-10.md  VAMOS_AI_최종_오류리스트_2026-06-10.md  VAMOS_최종_로드맵.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  FINAL_CHECK_PROMPT.md  settings.json
.claude/commands/: audit.md  sot-check.md  validate.md
.claude/hooks/: artifact_version_tracker.py  block_invalid_cm.sh  block_invalid_ea.sh  build_golden_set.py  cm_validator.py  confidence_calibrator.py  cross_model_compare.py  deep_diff_compare.py  deepeval_metrics.py  deterministic_validator.py  docling_parser.py  dspy_extraction_module.py  evidently_eval.py  exa_verifier.py  giskard_scanner.py  gptcache_manager.py  guardrails_validator.py  hhem_scorer.py  input_scanner.py  json_auto_repair.py  json_semantic_diff.py  korean_analyzer.py  kr_sbert_embedder.py  langfuse_logger.py  lineage_tracker.py  llama_firewall_scanner.py  minicheck_verifier.py  (+12 more)
04. 구현단계/: v10_pipeline_plan.md  v11_gap_analysis_skill.md  v11_pipeline_framework_skill.md  v13_enhanced_plan.md  v13_plan.md  v9_pipeline_plan.md
VAMOS Engineering/: CONTEXT_LOADING_MAP.md  CPS_TEMPLATE.md  P0-2_CLAUDE_MD_STRUCTURE_SPEC.md  P0-2_DESIGN_ASSET_MAP.md  P0-2_OBSIDIAN_MATRIX_MAPPING.md  P0-4_FIVE_PLAN_OUTLINES.md  PROGRESS.md  ROADMAP_SESSION_EXECUTION_PROMPTS.md  SESSION_PROMPT_SKELETON.md  STRATEGY_01_FAILURE_AND_RISK.md  STRATEGY_02_SCOPE_AND_PRIORITY.md  STRATEGY_03_SESSION_AND_KNOWLEDGE.md  STRATEGY_04_TOOL_MAINTENANCE.md  STRATEGY_05_SAFETY_AND_ETHICS.md  STRATEGY_06_INTEGRATION_AND_DEPLOY.md  STRATEGY_07_LEARNING_AND_QUALITY.md  STRATEGY_08_ENGINEERING_MATRIX.md  STRATEGY_09_HARNESS_ENGINEERING.md  STRATEGY_10_VERIFICATION_SYSTEM.md  STRATEGY_11_ASSET_INVENTORY.md  cross_eng_plan.md  doc_strategy.md  release_strategy.md  runtime_decisions.md  runtime_eng_plan.md  security_strategy.md  test_strategy.md
VAMOS HOME/: OBSIDIAN-STRATEGY-v3.md  _NOTE_FILELIST.md
_targets/: DECISION_REGISTER.md  FINAL_FIX_REPORT.md  FINAL_TARGET_VERDICT.md  FIX_MANIFEST.md  MUST_FIX_BACKLOG.json  MUST_FIX_BACKLOG.md  MUST_FIX_IMPL_TIME.md  MUST_FIX_SUBJECTIVE_620.md  P4_1_RESUME_2026-06-12.md  P4_2_PROMPT_2026-06-13.md  PHASE2_RESUME_STATE.md  PHASE2_실행프롬프트_2026-06-11.md  PHASE2_환경리포트.md  ROADMAP_정본화_검증보고서_2026-06-11.md  SESSION3_교차검증판단_2026-06-10.md  SESSION_HANDOFF.md  STATE_AND_RESUME.md  TIER1_APPLIED.md  crossAI_diff.json  eol_baseline_p4-0.txt  ledger.jsonl  p4_0_sot_edits_pending.md  p4_1_stage_gate_실측_2026-06-12.md  p4_2_roadmap_edits_pending.md  구현단계_사전검증보고서_2026-06-12.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_v0_baseline.py
backend/tests/: conftest.py  test_a1_multibrain_adapter.py  test_a2_preset_modularization.py  test_alembic_baseline.py  test_b3_memory_decay.py  test_blue_nodes_scaffold.py  test_c1_logic_verifier.py  test_c2_math_verifier.py  test_c3_code_verifier.py  test_config.py  test_d1_think_engine.py  test_d2_multimodal_engine.py  test_e_series_tools.py  test_i1.py  test_i10_tool_router.py  test_i11_output_composer.py  test_i13_output_renderer.py  test_i14_summarizer.py  test_i15_evidence_qod.py  test_i16_knowledge_search.py  test_i17_blue_node_manager.py  test_i4_multimodal_interpreter.py  test_i5_gate.py  test_i6_self_check.py  test_pipeline.py  test_rpc_server.py  test_s1_self_check_surface.py  test_schemas.py  test_storage.py
backend/vamos_core/: __init__.py
backend/vamos_core/adapters/: __init__.py  a1_multibrain_adapter.py  a2_preset_modularization.py
backend/vamos_core/blue_nodes/: __init__.py
backend/vamos_core/blue_nodes/content/: __init__.py
backend/vamos_core/blue_nodes/dev/: __init__.py
backend/vamos_core/blue_nodes/research/: __init__.py
backend/vamos_core/infra/: __init__.py  config_loader.py  logger.py
backend/vamos_core/orange_core/: __init__.py  i10_tool_router.py  i11_output_composer.py  i13_output_renderer.py  i14_summarizer.py  i15_evidence_qod.py  i16_knowledge_search.py  i17_blue_node_manager.py  i19_approval_manager.py  i1_intent_detector.py  i20_failure_manager.py  i2_context_builder.py  i4_multimodal_interpreter.py  i5_decision_engine.py  i6_self_check.py  i8_policy_engine.py  i9_cost_manager.py  pipeline.py  s1_self_check_surface.py
backend/vamos_core/reasoning/: __init__.py  _common.py  c1_logic_verifier.py  c2_math_verifier.py  c3_code_verifier.py  d1_think_engine.py  d2_multimodal_engine.py
backend/vamos_core/rpc/: __init__.py  server.py
backend/vamos_core/safety/: __init__.py  never_auto.py
backend/vamos_core/schemas/: __init__.py  contracts.py  registries.py
backend/vamos_core/storage/: __init__.py  b3_memory_decay.py  memory_store.py
backend/vamos_core/tools/: __init__.py  _base.py  e1_coding_helper.py  e2_web_search.py  e3_document_parser.py  e4_code_executor.py  e5_image_analyzer.py  e6_z3_solver.py
benchmark_results/: alignment_report.json  eval_results.json  v0_go_nogo_gate_report.json
config/: config.v1.toml  schema_registry.toml
scripts/: artifact_manifest.json  check_config_lock.py  check_lockfiles.py  d1_prime_verify.py  extract_seeds.py  gen_registries_py.py  generate_types.py  ipc_spawn_check.py  p4_2_manifest.json  p4_3_manifest.json  p5_1_manifest.json  p6_0_manifest.json  p6_1a_manifest.json  p6_1b_2_manifest.json  p6_1b_manifest.json  p6_1b_step0_rescan.py  rebuild_golden_set_v2.py  roundtrip_test.py  run_v0_eval.py  test_vamos_lint_layer2.py  trace_matrix.map.json  trace_matrix.py  validate_schema_registry.py  vamos_lint.py  verify_artifacts.py  verify_golden_set.py
src/: App.tsx  ipc.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/bridge/: mod.rs  python_manager.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: generated.rs  mod.rs
src-tauri/tests/: bridge_spawn.rs  roundtrip.rs  roundtrip_instances.json
(+1637 files in other folders)
