# VAMOS Backend — Phase 2-4 린터/CI 환경 (STRATEGY_09 §7.2 + §8.1, PART2 L1490~1536 정본)
# Layer 0 (PART2 기본) + Layer 1 (VAMOS 고유 — DEC-002 banned-api)

[tool.poetry]
name = "vamos-backend"
version = "0.1.0"
description = "VAMOS AI Backend"
authors = ["VAMOS"]
packages = [{ include = "vamos_core" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.0.0,<3.0"
langchain-core = ">=0.3.0,<1.0"         # DEC-002 Allowlist
langchain-community = ">=0.3.0,<1.0"    # DEC-002 Allowlist
langchain-openai = ">=0.2.0,<1.0"       # DEC-002 Allowlist
langgraph = ">=0.2.0,<1.0"              # LOCK: Agent Workflow 프레임워크
chromadb = ">=0.5.0,<1.0"               # V1 Vector DB (LOCK: V1=Chroma)
aiosqlite = ">=0.20.0,<1.0"             # PHASE_B3 정본 — V0-STEP-5 L0 메모리 (P4-1)
tiktoken = ">=0.8.0,<1.0"               # PHASE_B3 정본 — I-9 토큰 카운팅 (P4-1)
structlog = ">=24.4.0,<25.0"            # PHASE_B3 정본 — JSONL 구조화 로깅 (P4-1)
aiofiles = ">=24.1.0,<25.0"             # PHASE_B3 정본 — async 파일 I/O (P4-1)
jsonrpcserver = ">=5.0,<6.0"            # PART2 V0-STEP-3 L410 (PHASE_B3 미핀 → 최신 안정 5.x, PHASE4-DEC-013) — IPC 서버

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9.0"                 # PHASE_B3 정본
pytest-asyncio = ">=0.24.0,<1.0"        # PHASE_B3 정본
pytest-cov = ">=6.0.0,<7.0"             # PHASE_B3 정본
ruff = ">=0.8.0,<1.0"                   # PHASE_B3 정본
mypy = ">=1.0"

# PHASE4-DEC-007: Eval 스택 — Phase 5(5-1) 착수 시 optional 그룹 등재 (dev 아님 — ragas 대형
# 전이의존이 V0 CI 3-job을 오염하지 않도록 격리). 설치: `poetry install --with eval`.
# 버전 = 등재 시점(2026-06-13) 실측 고정 (A4 LOCK). minicheck = pip 미가용 →
# .claude/hooks/minicheck_verifier.py 폴백. promptfoo = Phase 2 스킬 자산 기존재(중복 등재 불요).
[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
ragas = ">=0.4.3,<0.5"                  # 등재시점 최신 0.4.3 (A4 LOCK)
deepeval = ">=4.0.6,<5.0"               # 등재시점 최신 4.0.6 (A4 LOCK)

[tool.ruff]
target-version = "py311"
line-length = 100                        # PHASE_B6 정본 (120 아님)

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]  # PHASE_B6 정본 13개

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# DEC-002: langchain 본체 패키지 import 금지 (Allowlist: langchain-core/community/openai)
"langchain".msg = "DEC-002: langchain 본체 import 금지. langchain-core/community/openai만 허용"
"langchain.chains".msg = "DEC-002: langchain.chains import 금지"
"langchain.agents".msg = "DEC-002: langchain.agents import 금지"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]               # 테스트는 assert 허용

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
