[package]
name = "vamos-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "VAMOS desktop shell (Tauri 2.0) — Rust backend + Python AI bridge"
authors = ["VAMOS"]

# lib + bin (Tauri 2.0 표준 구조: 통합 테스트가 모델/브릿지 모듈을 import 하려면 lib 타깃 필요)
[lib]
name = "vamos_app_lib"
path = "src/lib.rs"

[[bin]]
name = "vamos-app"
path = "src/main.rs"

[dependencies]
# A20 serde 직렬화 (DEC-005 §5) — PHASE_B3 §3 정본 버전
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# IPC Python 프로세스 관리 (STEP 5에서 활성: tokio process/io) — PHASE_B3 §3
tokio = { version = "1.42", features = ["process", "io-util", "rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
# (STEP 5에서 tokio-test/tempfile 추가 가능)
